# koila

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .testmondata-shm  .testmondata-wal  404.html  CHALLENGES.md  CITATION.cff  CNAME  CODE_OF_CONDUCT.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE  LICENCE.md  LICENSE.html  LICENSE.md  README.md  STRATEGY.md  genindex.html  index.html  mkdocs.yml  noxfile.py  objects.inv  package-lock.json  package.json  poetry.toml  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  sitemap.xml
.github/workflows/: build.yaml  format.yaml  gh-pages.yaml  pre-commit.yaml  precommit.yaml  release.yaml  typecheck.yaml  unit-test.yaml  unittest.yaml  unittesting.yaml
CODE_OF_CONDUCT/: index.html
LICENCE/: index.html
LICENSE/: index.html
_sources/: LICENSE.md
aioway/: __init__.py  blocks.py  casters.py  casts.py  factories.py  logs.py  streams.py  tables.py
aioway/attrs/: __init__.py  attrs.py  devices.py  genres.py  sets.py  shapes.py
aioway/blocks/: __init__.py  _typing.py  blocks.py  buffers.py  dfs.py  execs.py  factories.py  pandas.py  tensors.py  torch.py
aioway/buffers/: __init__.py  buffers.py  factories.py  numpy.py  tensors.py  torch.py  utils.py
aioway/calls/: __init__.py  callbacks.py  ctxs.py  memos.py  mgrs.py  opaque.py  rewrites.py  tracking.py
aioway/datatypes/: __init__.py
aioway/df/: __init__.py  columnar.py  compilers.py  dataframes.py  series.py  tapes.py
aioway/errors/: __init__.py  errors.py  planned.py  unknown.py
aioway/execs/: __init__.py  _data_loader.py  batches.py  binary.py  dags.py  execs.py  filters.py  inputs.py  iters.py  joins.py  maps.py  nexts.py  tracers.py  unary.py  zips.py
aioway/flows/: __init__.py  dags.py  flows.py
aioway/frames/: __init__.py  blocks.py  collections.py  frames.py  inputs.py  pandas.py  samplers.py  tensordicts.py  tensors.py
aioway/indices/: __init__.py  dists.py  faiss.py  indices.py
aioway/logs/: __init__.py  dicts.py  lazy.py  loggable.py
aioway/losses/: dists.py  losses.py
aioway/models/: __init__.py  models.py
aioway/modules/: __init__.py  factories.py  limits.py  models.py  prelude.py  previews.py
aioway/nodes/: __init__.py  displays.py  trees.py
aioway/plans/: __init__.py  dags.py  displays.py  nodes.py  physical.py  plans.py  trees.py  walkers.py  writers.py
aioway/previews/: __init__.py  configurable.py  einsums.py  previews.py  ranges.py  registries.py  tasks.py  transforms.py
aioway/procs/: __init__.py  callbacks.py  ctxs.py  memos.py  mgrs.py  procs.py  rewrites.py  tracking.py
aioway/relalg/: __init__.py  exprs.py
aioway/schemas/: __init__.py  columns.py  datatypes.lark  devices.py  dynamic.py  parsers.py  schemas.py  shapes.py  tables.py
aioway/streams/: __init__.py  batches.py  binary.py  frames.py  inputs.py  samplers.py  streams.py  unary.py
aioway/tables/: __init__.py  cartesian.py  execs.py  joins.py  linear.py  maps.py  sources.py  tables.py  zips.py
aioway/tabular/: __init__.py  iters.py  selects.py  tabular.py
aioway/typings/: __init__.py  casters.py  slicers.py
ci/: Makefile  gha.py  pdm.py  pre-commit.py  sh.py  testing.py
docs/: .gitignore  CODE_OF_CONDUCT.md  LICENCE.md  _config.yml  _coverpage.md  _sidebar.md  _toc.yml  architecture.md  index.html  index.md  mkdocs.yml
docs/designs/: casters.rst  data.rst  imperative.rst  indexing.rst  misc.rst  multi-backend.rst  physical.rst  queries.rst  resolutions.rst  scaling.rst  schemas.rst  time-series.rst  training.rst
docs/ips/: columns-vs-tables.rst  data.rst  extensions.rst  imperative.rst  models.rst  multi-backend.rst  queries.rst  scaling.rst
examples/: getting-started.py
koila/: __init__.py  __main__.py  constants.py  core.py  delayed.py  eager.py  errors.py  gpus.py  immediate.py  interfaces.py  lazy.py  partials.py  prepasses.py  protocols.py  runnables.py  shapes.py  tensors.py
koila/core/: delayed.py
koila/interfaces/: __init__.py  runnable.py  tensorlike.py
koila/tensors/: __init__.py  core.py  delayed.py  prepasses.py  runnable_tensors.py  runnables.py  tensors.py  wrappers.py
requirements/: dev.txt
src/aioway/: __init__.py  _common.py  _costs.py  _errors.py  _exprs.py  _logging.py  _tables.py  batches.py  blocks.py  casters.py  (+16 more)
tests/: __init__.py  common.py  conftest.py  fake.py  test_blocks.py  test_compilers.py  test_eager.py  test_einsums.py  test_exprs.py  test_factories.py  test_func.py  test_function.py  test_functions.py  test_indices.py  test_interfaces.py  test_intervals.py  test_layers.py  test_lazy.py  test_models.py  test_modules.py  test_prepasses.py  test_protocols.py  test_ranges.py  test_seed.py  test_shapes.py  test_tdicts.py  test_tensor.py  test_tensors.py  test_torch_plan.py  test_tracking.py  test_training.py
(+762 files in other folders)
