[project]
name = "koila"
description = "Prevent PyTorch's `CUDA error out of memory` in a few lines of code"
authors = [
    {name = "RenChu Wang", email = "patrick1031wang@gmail.com"},
]
dependencies = [
    "numpy>=1.26.3",
    "scipy>=1.11.4",
    "torch>=2.1.2",
    "black>=24.4.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache-2.0"}
dynamic = ["version"]

[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "coverage>=7.4.0",
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
]
format = [
    "autoflake>=2.2.1",
    "black>=23.12.1",
    "isort>=5.13.2",
]
website = [
    "jupyter>=1.1.1",
    "jupyter-book>=1.0.3",
    "myst-parser>=2.0.0",
]
type = [
    "mypy>=1.8.0",
]
