[project]
name = "aioway"
description = "AI on the way"
authors = [
    {name = "RenChu Wang", email = "patrick1031wang@gmail.com"},
]
requires-python = ">=3.13,<4"
readme = "README.md"
license = {text = "Apache-2.0"}
dynamic = ["version"]
dependencies = ["lark>=1.2.2", "numpy>=2.2.6", "pandas>=2.2.3", "rich>=14.0.0", "tensordict>=0.8.3", "torch>=2.7.0"]

[project.optional-dependencies]
ibis = [
    "ibis>=3.3.0",
]
faiss = [
    "faiss-cpu>=1.11.0",
]

[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]


[dependency-groups]
pre-commit = [
    "pre-commit>=4.2.0",
    "pip>=25.1.1",
    "autoflake>=2.3.1",
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.16.0",
]
tests = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-xdist>=3.7.0",
    "pytest-sugar>=1.0.0",
    "better-exceptions>=0.3.3",
    "pyinstrument>=5.1.1",
]
ipython = [
    "ipython>=9.2.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.3",
]
build = [
    "ansible>=11.6.0",
    "build>=1.2.2.post1",
    "cython>=3.1.1",
    "ninja>=1.11.1.4",
    "pip>=25.1.1",
    "setuptools>=80.9.0",
    "setuptools-scm>=8.3.1",
    "wheel>=0.45.1",
]

[tool.autoflake]
in-place = true
recursive = true
exclude = "__init__.py"
expand-star-imports = true
remove-all-unused-imports = true
remove-duplicate-keys = true

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
show_error_codes = true
check_untyped_defs = true

# Skipping analysis for some modules because they are not typed.
[[tool.mypy.overrides]]
module = [
    "faiss.*",
    "tensordict.*",
    "sympy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
    "-v",
    "-n=auto",
    "--ff",
    "--nf",
    "--import-mode=importlib",
    "--dist=loadfile",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
