[project]
name = "aioway"
description = "AI on the way"
authors = [
    {name = "RenChu Wang", email = "patrick1031wang@gmail.com"},
]
requires-python = ">=3.14,<3.15"
readme = "README.md"
license = {text = "Apache-2.0"}
dynamic = ["version"]
dependencies = ["lark>=1.3.1", "numpy>=2.4.3", "pandas>=3.0.1", "rich>=14.3.3", "tensordict>=0.11.0", "torch>=2.10.0"]

[project.optional-dependencies]
ibis = [
    "ibis>=3.3.0",
]
faiss = [
    "faiss-cpu>=1.13.2",
]

[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]


[dependency-groups]
pre-commit = [
    "autoflake>=2.3.3",
    "black>=26.3.0",
    "isort>=8.0.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
]
tests = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-randomly>=4.0.1",
    "pytest-xdist>=3.8.0",
    "better-exceptions>=0.3.3",
    "coverage>=7.13.4",
]
debugging = [
    "ipython>=9.11.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.3",
    "pyinstrument>=5.1.2",
    "jupytext>=1.19.1",
]
build = [
    "build>=1.4.0",
    "ninja>=1.13.0",
    "pip>=26.0.1",
    "setuptools>=82.0.1",
    "setuptools-scm>=9.2.2",
    "nox[pbs]>=2026.2.9",
]

[tool.autoflake]
in-place = true
recursive = true
exclude = "__init__.py"
expand-star-imports = true
remove-all-unused-imports = true
remove-duplicate-keys = true

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
show_error_codes = true
check_untyped_defs = true

# Skipping analysis for some modules because they are not typed.
[[tool.mypy.overrides]]
module = [
    "sympy.*",
    "tensordict.*",
    "faiss.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
    "-v",
    "--ff",
    "--nf",
    "--import-mode=importlib",
    "--dist=loadgroup",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
